# RepoLine

./: .gitignore  .mise.toml  CONTEXT.md  CONTRIBUTING.md  README.md  SECURITY.md  package.json
agent/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
agent/src/: agent.py  bridge_config.py  claude_stream.py  cursor_app_bridge_client.py  cursor_app_submit.py  cursor_app_tap.py  latency_harness.py  model_stream.py  repoline_skill.py  telemetry.py  turn_coordinator.py  turn_orchestrator.py  turn_strategy.py  voice_behavior.py
agent/src/provider_stream/: __init__.py  adapter.py  claude.py  codex.py  common.py  cursor.py  cursor_app.py  gemini.py  runner.py
agent/tests/: test_bridge_config.py  test_claude_stream.py  test_cursor_app_bridge_client.py  test_cursor_app_submit.py  test_cursor_app_tap.py  test_cursor_app_transport.py  test_latency_analysis.py  test_latency_harness.py  test_latency_report.py  test_model_stream.py  test_provider_stream_adapters.py  test_repoline_skill.py  test_telemetry.py  test_turn_coordinator.py  test_turn_orchestrator.py  test_turn_strategy.py  test_voice_behavior.py
cursor-app-bridge-extension/: README.md  extension.js  package.json
docs/: ARCHITECTURE.md  BRANDING.md  COSTS.md  CURSOR-APP-VALIDATION-2026-04-19.md  EVALS.md  HOW-IT-WORKS.md  LATENCY.md  ONBOARDING.md  PHONE-NUMBER-PLAN.md  PHONE.md  README.md  STREAMING-BRIDGE.md  VOICE-FIRST-BUILD-SPEC.md
frontend/: .env.example  README.md  app-config.ts  biome.json  middleware.ts  next.config.ts  package.json
scripts/: agent_stream_bridge.py  bootstrap.sh  (+16 more)
(+135 files in other folders)
